--- a/pair.html
+++ b/pair.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PAIR CODE</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <title>ABDUL MD 2.0 PAIR CODE</title>
+  <link rel="styleheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <style>
     body {
       display: flex;
@@ -149,7 +149,7 @@
             <br>
             <h6>🔢 Enter your number with country code.</h6>
             <div class="input-container">
-              <input placeholder="+94729xxxxxx" type="number" id="number" placeholder="❗ Enter your phone number with country code" name="">
+              <input placeholder="+94751xxxxxx" type="number" id="number" placeholder="❗ Enter your phone number with country code" name="">
               <button id="submit">Submit</button>
             </div>
             <!-- Add the loading spinner -->
